--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <div class="row">
         <div class="about-img">
-          <img src="../img/about.jpg" alt="Tentang Kami" />
+          <img src="img/about.jpg" alt="Tentang Kami" />
         </div>
         <div class="content">
           <h3>Kenapa Harus Pilih Toko Kami?</h3>
