--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam,
           adipisci.
         </p>
-        <a href="#" class="cta">Beli Sekarang</a>
+        <a href="#" class="cta">Belanja Sekarang</a>
       </main>
     </section>
     <!-- hero section end -->
