--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <i data-feather="plus-circle"></i>
             <input type="text" placeholder="Jumlah Pesanan" />
           </div>
-          <button type="submit" class="btn">Kirim Pesan</button>
+          <button type="submit" class="btn">Order</button>
         </form>
       </div>
     </section>
